--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,22 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# Roff source file
+*.0 linguist-detectable=true
+*.0 linguist-documentation=false
+*.0 linguist-language=Roff
+*.1 linguist-detectable=true
+*.1 linguist-documentation=false
+*.1 linguist-language=Roff
+*.2 linguist-detectable=true
+*.2 linguist-documentation=false
+*.2 linguist-language=Roff
+*.3 linguist-detectable=true
+*.3 linguist-documentation=false
+*.3 linguist-language=Roff
+*.roff linguist-detectable=true
+*.roff linguist-documentation=false
+*.roff linguist-language=Roff
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -161,10 +177,13 @@
 *.gif linguist-detectable=false
 *.gif linguist-documentation=false
 *.gif linguist-language=GIF
+
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2023, Wednesday, February 15th at 4:21 pm PST)
+# Line count (including blank lines and compiler line): 190
+
 # End of script
